--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -49,7 +49,7 @@ lis3dh-async       = "0.8.0"
 sha2               = { version = "0.10.8", default-features = false }
 smart-leds         = "0.3.0"
 ssd1306            = "0.8.4"
-static_cell        = { version = "1.2.0", features = ["nightly"] }
+static_cell        = { version = "=1.2.0", features = ["nightly"] }
 usb-device         = "0.2.9"
 usbd-serial        = "0.1.1"
 
