--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,16 +87,16 @@ jobs:
       - name: check esp32-hal (embassy)
         run: |
           cd esp32-hal/
-          cargo build --examples --release --features=embassy,embassy-time-timg0,embassy-executor-thread
+          cargo build --example=embassy* --release --features=embassy,embassy-time-timg0,embassy-executor-thread
       - name: check esp32-hal (embassy, async)
         run: |
           cd esp32-hal/
-          cargo build --examples --release --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo build --example=embassy* --release --features=embassy,embassy-time-timg0,async,embassy-executor-thread
       - name: check esp32-hal (embassy, log/defmt)
         run: |
           cd esp32-hal/
-          cargo build --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
-          cargo build --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
+          cargo build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
+          cargo build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
       - name: check esp32-hal (psram)
         run: cd esp32-hal/ && cargo build --example=psram --features=psram-2m --release # This example requires release!
       # Ensure documentation can be built
@@ -131,9 +131,9 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c2-hal (async, systick)
-        run: cd esp32c2-hal/ && cargo +nightly build --examples --release --features=embassy,embassy-time-systick,async
+        run: cd esp32c2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick,async
       - name: check esp32c2-hal (async, timg0)
-        run: cd esp32c2-hal/ && cargo +nightly build --examples --release --features=embassy,embassy-time-timg0,async
+        run: cd esp32c2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-timg0,async
       - name: check esp32c2-hal (interrupt-preemption)
         run: cd esp32c2-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32c2-hal (direct-vectoring)
@@ -141,8 +141,8 @@ jobs:
       - name: check esp32c2-hal (embassy, log/defmt)
         run: |
           cd esp32c2-hal/
-          cargo +nightly build --examples --features=embassy,embassy-time-timg0,defmt
-          cargo +nightly build --examples --features=embassy,embassy-time-timg0,log
+          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32c2-hal/ && cargo doc --features=eh1
@@ -177,11 +177,11 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c3-hal (async, systick)
-        run: cd esp32c3-hal/ && cargo +nightly build --examples --release --features=embassy,embassy-time-systick
+        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick
       - name: check esp32c3-hal (async, timg0)
-        run: cd esp32c3-hal/ && cargo +nightly build --examples --release --features=embassy,embassy-time-timg0
+        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-timg0
       - name: check esp32c3-hal (async)
-        run: cd esp32c3-hal/ && cargo +nightly build --examples --release --features=embassy,embassy-time-systick,async
+        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick,async
       - name: check esp32c6-hal (interrupt-preemption)
         run: cd esp32c6-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32c6-hal (direct-vectoring)
@@ -189,8 +189,8 @@ jobs:
       - name: check esp32c3-hal (embassy, log/defmt)
         run: |
           cd esp32c3-hal/
-          cargo +nightly build --examples --features=embassy,embassy-time-timg0,defmt
-          cargo +nightly build --examples --features=embassy,embassy-time-timg0,log
+          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32c3-hal/ && cargo doc --features=eh1
@@ -228,11 +228,11 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c6-hal (async, systick)
-        run: cd esp32c6-hal/ && cargo +nightly build --examples --release --features=embassy,embassy-time-systick
+        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick
       - name: check esp32c6-hal (async, timg0)
-        run: cd esp32c6-hal/ && cargo +nightly build --examples --release --features=embassy,embassy-time-timg0
+        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-timg0
       - name: check esp32c6-hal (async)
-        run: cd esp32c6-hal/ && cargo +nightly build --examples --release --features=embassy,embassy-time-systick,async
+        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick,async
       - name: check esp32c6-hal (interrupt-preemption)
         run: cd esp32c6-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32c6-hal (direct-vectoring)
@@ -240,8 +240,8 @@ jobs:
       - name: check esp32c6-hal (embassy, log/defmt)
         run: |
           cd esp32c6-hal/
-          cargo +nightly build --examples --features=embassy,embassy-time-timg0,defmt
-          cargo +nightly build --examples --features=embassy,embassy-time-timg0,log
+          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32c6-hal/ && cargo doc --features=eh1
@@ -294,11 +294,11 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32h2-hal (async, systick)
-        run: cd esp32h2-hal/ && cargo +nightly build --examples --release --features=embassy,embassy-time-systick
+        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick
       - name: check esp32h2-hal (async, timg0)
-        run: cd esp32h2-hal/ && cargo +nightly build --examples --release --features=embassy,embassy-time-timg0
+        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-timg0
       - name: check esp32h2-hal (async)
-        run: cd esp32h2-hal/ && cargo +nightly build --examples --release --features=embassy,embassy-time-systick,async
+        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick,async
       - name: check esp32h2-hal (interrupt-preemption)
         run: cd esp32h2-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32h2-hal (direct-vectoring)
@@ -306,8 +306,8 @@ jobs:
       - name: check esp32h2-hal (embassy, log/defmt)
         run: |
           cd esp32h2-hal/
-          cargo +nightly build --examples --features=embassy,embassy-time-timg0,defmt
-          cargo +nightly build --examples --features=embassy,embassy-time-timg0,log
+          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32h2-hal/ && cargo doc --features=eh1
@@ -371,24 +371,24 @@ jobs:
       - name: check esp32s2-hal (embassy, timg0)
         run: |
           cd esp32s2-hal/
-          cargo +esp build --examples --release --features=embassy,embassy-time-timg0,embassy-executor-thread
+          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-timg0,embassy-executor-thread
       - name: check esp32s2-hal (embassy, systick)
         run: |
           cd esp32s2-hal/
-          cargo +esp build --examples --release --features=embassy,embassy-time-systick,embassy-executor-thread
+          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-systick,embassy-executor-thread
       - name: check esp32s2-hal (embassy, timg0, async)
         run: |
           cd esp32s2-hal/
-          cargo +esp build --examples --release --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-timg0,async,embassy-executor-thread
       - name: check esp32s2-hal (embassy, systick, async)
         run: |
           cd esp32s2-hal/
-          cargo +esp build --examples --release --features=embassy,embassy-time-systick,async,embassy-executor-thread
+          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-systick,async,embassy-executor-thread
       - name: check esp32s2-hal (embassy, log/defmt)
         run: |
           cd esp32s2-hal/
-          cargo +esp build --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
-          cargo +esp build --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
+          cargo +esp build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
+          cargo +esp build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
       - name: check esp32s2-hal (psram)
         run: cd esp32s2-hal/ && cargo +esp build --example=psram --features=psram-2m --release # This example requires release!
       # Ensure documentation can be built
@@ -435,19 +435,19 @@ jobs:
       - name: check esp32s3-hal (embassy, timg0)
         run: |
           cd esp32s3-hal/
-          cargo +esp build --examples --release --features=embassy,embassy-time-timg0,embassy-executor-thread
+          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-timg0,embassy-executor-thread
       - name: check esp32s3-hal (embassy, systick)
         run: |
           cd esp32s3-hal/
-          cargo +esp build --examples --release --features=embassy,embassy-time-systick,embassy-executor-thread
+          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-systick,embassy-executor-thread
       - name: check esp32s3-hal (embassy, timg0, async)
         run: |
           cd esp32s3-hal/
-          cargo +esp build --examples --release --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-timg0,async,embassy-executor-thread
       - name: check esp32s3-hal (embassy, systick, async)
         run: |
           cd esp32s3-hal/
-          cargo +esp build --examples --release --features=embassy,embassy-time-systick,async,embassy-executor-thread
+          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-systick,async,embassy-executor-thread
       - name: check esp32s3-hal (octal psram and psram)
         run: | # This examples require release!
           cd esp32s3-hal/
@@ -456,8 +456,8 @@ jobs:
       - name: check esp32s3-hal (embassy, log/defmt)
         run: |
           cd esp32s3-hal/
-          cargo +esp build --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
-          cargo +esp build --examples --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
+          cargo +esp build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
+          cargo +esp build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32s3-hal/ && cargo doc --features=eh1
