--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,19 +84,15 @@ jobs:
           cd esp32-hal/
           cargo build --examples --features=eh1,ufmt,log
           cargo build --examples --features=eh1,ufmt,defmt
-      - name: check esp32-hal (embassy)
-        run: |
-          cd esp32-hal/
-          cargo build --example=embassy* --release --features=embassy,embassy-time-timg0,embassy-executor-thread
       - name: check esp32-hal (embassy, async)
         run: |
           cd esp32-hal/
           cargo build --example=embassy* --release --features=embassy,embassy-time-timg0,async,embassy-executor-thread
-      - name: check esp32-hal (embassy, log/defmt)
+      - name: check esp32-hal (embassy, async, log/defmt)
         run: |
           cd esp32-hal/
-          cargo build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
-          cargo build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
+          cargo build --example=embassy* --features=embassy,embassy-time-timg0,async,embassy-executor-interrupt,embassy-executor-thread,defmt
+          cargo build --example=embassy* --features=embassy,embassy-time-timg0,async,embassy-executor-interrupt,embassy-executor-thread,log
       - name: check esp32-hal (psram)
         run: cd esp32-hal/ && cargo build --example=psram --features=psram-2m --release # This example requires release!
       # Ensure documentation can be built
@@ -131,18 +127,18 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c2-hal (async, systick)
-        run: cd esp32c2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick,async
+        run: cd esp32c2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-systick,async
       - name: check esp32c2-hal (async, timg0)
-        run: cd esp32c2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-timg0,async
+        run: cd esp32c2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-timg0,async
       - name: check esp32c2-hal (interrupt-preemption)
         run: cd esp32c2-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32c2-hal (direct-vectoring)
         run: cd esp32c2-hal/ && cargo +nightly build --example=direct-vectoring --features=direct-vectoring
-      - name: check esp32c2-hal (embassy, log/defmt)
+      - name: check esp32c2-hal (embassy, async, log/defmt)
         run: |
           cd esp32c2-hal/
-          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,defmt
-          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,log
+          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32c2-hal/ && cargo doc --features=eh1
@@ -177,20 +173,18 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c3-hal (async, systick)
-        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick
+        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-systick
       - name: check esp32c3-hal (async, timg0)
-        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-timg0
-      - name: check esp32c3-hal (async)
-        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick,async
+        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-timg0
       - name: check esp32c6-hal (interrupt-preemption)
         run: cd esp32c6-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32c6-hal (direct-vectoring)
         run: cd esp32c6-hal/ && cargo +nightly build --example=direct-vectoring --features=direct-vectoring
-      - name: check esp32c3-hal (embassy, log/defmt)
+      - name: check esp32c3-hal (embassy, async, log/defmt)
         run: |
           cd esp32c3-hal/
-          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,defmt
-          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,log
+          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32c3-hal/ && cargo doc --features=eh1
@@ -228,20 +222,18 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c6-hal (async, systick)
-        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick
+        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-systick
       - name: check esp32c6-hal (async, timg0)
-        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-timg0
-      - name: check esp32c6-hal (async)
-        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick,async
+        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-timg0
       - name: check esp32c6-hal (interrupt-preemption)
         run: cd esp32c6-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32c6-hal (direct-vectoring)
         run: cd esp32c6-hal/ && cargo +nightly build --example=direct-vectoring --features=direct-vectoring
-      - name: check esp32c6-hal (embassy, log/defmt)
+      - name: check esp32c6-hal (embassy, async, log/defmt)
         run: |
           cd esp32c6-hal/
-          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,defmt
-          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,log
+          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32c6-hal/ && cargo doc --features=eh1
@@ -294,20 +286,18 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32h2-hal (async, systick)
-        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick
+        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-systick
       - name: check esp32h2-hal (async, timg0)
-        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-timg0
-      - name: check esp32h2-hal (async)
-        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,embassy-time-systick,async
+        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-timg0
       - name: check esp32h2-hal (interrupt-preemption)
         run: cd esp32h2-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32h2-hal (direct-vectoring)
         run: cd esp32h2-hal/ && cargo +nightly build --example=direct-vectoring --features=direct-vectoring
-      - name: check esp32h2-hal (embassy, log/defmt)
+      - name: check esp32h2-hal (embassy, async, log/defmt)
         run: |
           cd esp32h2-hal/
-          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,defmt
-          cargo +nightly build --example=embassy* --features=embassy,embassy-time-timg0,log
+          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32h2-hal/ && cargo doc --features=eh1
@@ -365,30 +355,19 @@ jobs:
           cd esp32s2-hal/
           cargo +esp build --examples --features=eh1,ufmt,log
           cargo +esp build --examples --features=eh1,ufmt,defmt
-      # FIXME: `time-systick` feature disabled for now, see 'esp32s2-hal/Cargo.toml'.
-      # - name: check esp32s2-hal (async, systick)
-      #   run: cd esp32s2-hal/ && cargo build --example=embassy_hello_world --features=embassy,embassy-time-systick,executor
-      - name: check esp32s2-hal (embassy, timg0)
+      - name: check esp32s2-hal (embassy, async, timg0)
         run: |
           cd esp32s2-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-timg0,embassy-executor-thread
-      - name: check esp32s2-hal (embassy, systick)
+          cargo +esp build --example=embassy* --release --features=embassy,async,embassy-time-timg0,embassy-executor-thread
+      - name: check esp32s2-hal (embassy, async, systick)
         run: |
           cd esp32s2-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-systick,embassy-executor-thread
-      - name: check esp32s2-hal (embassy, timg0, async)
+          cargo +esp build --example=embassy* --release --features=embassy,async,embassy-time-systick,embassy-executor-thread
+      - name: check esp32s2-hal (embassy, async, log/defmt)
         run: |
           cd esp32s2-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-timg0,async,embassy-executor-thread
-      - name: check esp32s2-hal (embassy, systick, async)
-        run: |
-          cd esp32s2-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-systick,async,embassy-executor-thread
-      - name: check esp32s2-hal (embassy, log/defmt)
-        run: |
-          cd esp32s2-hal/
-          cargo +esp build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
-          cargo +esp build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
+          cargo +esp build --example=embassy* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
+          cargo +esp build --example=embassy* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
       - name: check esp32s2-hal (psram)
         run: cd esp32s2-hal/ && cargo +esp build --example=psram --features=psram-2m --release # This example requires release!
       # Ensure documentation can be built
@@ -432,32 +411,24 @@ jobs:
           cd esp32s3-hal/
           cargo +esp build --examples --features=eh1,ufmt,log
           cargo +esp build --examples --features=eh1,ufmt,defmt
-      - name: check esp32s3-hal (embassy, timg0)
+      - name: check esp32s3-hal (embassy, async, timg0)
         run: |
           cd esp32s3-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-timg0,embassy-executor-thread
-      - name: check esp32s3-hal (embassy, systick)
+          cargo +esp build --example=embassy* --release --features=embassy,async,embassy-time-timg0,embassy-executor-thread
+      - name: check esp32s3-hal (embassy, async, systick)
         run: |
           cd esp32s3-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-systick,embassy-executor-thread
-      - name: check esp32s3-hal (embassy, timg0, async)
-        run: |
-          cd esp32s3-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-timg0,async,embassy-executor-thread
-      - name: check esp32s3-hal (embassy, systick, async)
-        run: |
-          cd esp32s3-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,embassy-time-systick,async,embassy-executor-thread
+          cargo +esp build --example=embassy* --release --features=embassy,async,embassy-time-systick,embassy-executor-thread
       - name: check esp32s3-hal (octal psram and psram)
         run: | # This examples require release!
           cd esp32s3-hal/
           cargo +esp build --example=octal_psram --features=opsram-2m --release
           cargo +esp build --example=psram --features=psram-2m --release
-      - name: check esp32s3-hal (embassy, log/defmt)
+      - name: check esp32s3-hal (embassy, async, log/defmt)
         run: |
           cd esp32s3-hal/
-          cargo +esp build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
-          cargo +esp build --example=embassy* --features=embassy,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
+          cargo +esp build --example=embassy* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
+          cargo +esp build --example=embassy* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32s3-hal/ && cargo doc --features=eh1
