Fix ESP32-H2 embassy_i2c example requirements

--- a/esp32h2-hal/Cargo.toml
+++ b/esp32h2-hal/Cargo.toml
@@ -91,7 +91,7 @@ required-features = ["embassy"]
 
 [[example]]
 name              = "embassy_i2c"
-required-features = ["async", "embassy", "embassy-time-systick"]
+required-features = ["async", "embassy"]
 
 [[example]]
 name              = "embassy_serial"
