Fix Xtensa example building

--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -106,11 +106,11 @@ name              = "embassy_multicore"
 required-features = ["embassy", "embassy-executor-thread"]
 
 [[example]]
-name              = "embassy_multicore_interrupt"
+name              = "embassyinterrupt_multicore_interrupt"
 required-features = ["embassy", "embassy-executor-interrupt"]
 
 [[example]]
-name              = "embassy_multiprio"
+name              = "embassyinterrupt_multiprio"
 required-features = ["embassy", "embassy-executor-interrupt"]
 
 [[example]]
@@ -139,16 +139,16 @@ required-features = ["embassy", "embassy-executor-thread", "async"]
 
 [[example]]
 name              = "embassy_rmt_tx"
-required-features = ["embassy", "async"]
+required-features = ["embassy", "async", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_rmt_rx"
-required-features = ["embassy", "async"]
+required-features = ["embassy", "async", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_i2s_sound"
-required-features = ["embassy", "async"]
+required-features = ["embassy", "async", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_i2s_read"
-required-features = ["embassy", "async"]
+required-features = ["embassy", "async", "embassy-executor-thread"]
