--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,12 +87,16 @@ jobs:
       - name: check esp32-hal (embassy, async)
         run: |
           cd esp32-hal/
-          cargo build --example=embassy* --release --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+          cargo build --example=embassy_* --release --features=embassy,embassy-time-timg0,async,embassy-executor-thread
+      - name: check esp32-hal (embassy, async, embassy-executor-interrupt)
+        run: |
+          cd esp32-hal/
+          cargo build --example=embassyinterrupt_* --release --features=embassy,embassy-time-timg0,async,embassy-executor-interrupt          
       - name: check esp32-hal (embassy, async, log/defmt)
         run: |
           cd esp32-hal/
-          cargo build --example=embassy* --features=embassy,embassy-time-timg0,async,embassy-executor-interrupt,embassy-executor-thread,defmt
-          cargo build --example=embassy* --features=embassy,embassy-time-timg0,async,embassy-executor-interrupt,embassy-executor-thread,log
+          cargo build --example=embassy_* --features=embassy,embassy-time-timg0,async,embassy-executor-interrupt,embassy-executor-thread,defmt
+          cargo build --example=embassy_* --features=embassy,embassy-time-timg0,async,embassy-executor-interrupt,embassy-executor-thread,log
       - name: check esp32-hal (psram)
         run: cd esp32-hal/ && cargo build --example=psram --features=psram-2m --release # This example requires release!
       # Ensure documentation can be built
@@ -127,9 +131,9 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c2-hal (async, systick)
-        run: cd esp32c2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-systick,async
+        run: cd esp32c2-hal/ && cargo +nightly build --example=embassy_* --release --features=embassy,async,embassy-time-systick,async
       - name: check esp32c2-hal (async, timg0)
-        run: cd esp32c2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-timg0,async
+        run: cd esp32c2-hal/ && cargo +nightly build --example=embassy_* --release --features=embassy,async,embassy-time-timg0,async
       - name: check esp32c2-hal (interrupt-preemption)
         run: cd esp32c2-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32c2-hal (direct-vectoring)
@@ -137,8 +141,8 @@ jobs:
       - name: check esp32c2-hal (embassy, async, log/defmt)
         run: |
           cd esp32c2-hal/
-          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,defmt
-          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,log
+          cargo +nightly build --example=embassy_* --features=embassy,async,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy_* --features=embassy,async,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32c2-hal/ && cargo doc --features=eh1
@@ -173,9 +177,9 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c3-hal (async, systick)
-        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-systick
+        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy_* --release --features=embassy,async,embassy-time-systick
       - name: check esp32c3-hal (async, timg0)
-        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-timg0
+        run: cd esp32c3-hal/ && cargo +nightly build --example=embassy_* --release --features=embassy,async,embassy-time-timg0
       - name: check esp32c6-hal (interrupt-preemption)
         run: cd esp32c6-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32c6-hal (direct-vectoring)
@@ -183,8 +187,8 @@ jobs:
       - name: check esp32c3-hal (embassy, async, log/defmt)
         run: |
           cd esp32c3-hal/
-          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,defmt
-          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,log
+          cargo +nightly build --example=embassy_* --features=embassy,async,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy_* --features=embassy,async,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32c3-hal/ && cargo doc --features=eh1
@@ -222,9 +226,9 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32c6-hal (async, systick)
-        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-systick
+        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy_* --release --features=embassy,async,embassy-time-systick
       - name: check esp32c6-hal (async, timg0)
-        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-timg0
+        run: cd esp32c6-hal/ && cargo +nightly build --example=embassy_* --release --features=embassy,async,embassy-time-timg0
       - name: check esp32c6-hal (interrupt-preemption)
         run: cd esp32c6-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32c6-hal (direct-vectoring)
@@ -232,8 +236,8 @@ jobs:
       - name: check esp32c6-hal (embassy, async, log/defmt)
         run: |
           cd esp32c6-hal/
-          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,defmt
-          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,log
+          cargo +nightly build --example=embassy_* --features=embassy,async,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy_* --features=embassy,async,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32c6-hal/ && cargo doc --features=eh1
@@ -286,9 +290,9 @@ jobs:
           cargo +nightly build --examples --features=eh1,ufmt,log
           cargo +nightly build --examples --features=eh1,ufmt,defmt
       - name: check esp32h2-hal (async, systick)
-        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-systick
+        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy_* --release --features=embassy,async,embassy-time-systick
       - name: check esp32h2-hal (async, timg0)
-        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy* --release --features=embassy,async,embassy-time-timg0
+        run: cd esp32h2-hal/ && cargo +nightly build --example=embassy_* --release --features=embassy,async,embassy-time-timg0
       - name: check esp32h2-hal (interrupt-preemption)
         run: cd esp32h2-hal/ && cargo +nightly build --example=interrupt_preemption --features=interrupt-preemption
       - name: check esp32h2-hal (direct-vectoring)
@@ -296,8 +300,8 @@ jobs:
       - name: check esp32h2-hal (embassy, async, log/defmt)
         run: |
           cd esp32h2-hal/
-          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,defmt
-          cargo +nightly build --example=embassy* --features=embassy,async,embassy-time-timg0,log
+          cargo +nightly build --example=embassy_* --features=embassy,async,embassy-time-timg0,defmt
+          cargo +nightly build --example=embassy_* --features=embassy,async,embassy-time-timg0,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32h2-hal/ && cargo doc --features=eh1
@@ -358,16 +362,20 @@ jobs:
       - name: check esp32s2-hal (embassy, async, timg0)
         run: |
           cd esp32s2-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,async,embassy-time-timg0,embassy-executor-thread
+          cargo +esp build --example=embassy_* --release --features=embassy,async,embassy-time-timg0,embassy-executor-thread
       - name: check esp32s2-hal (embassy, async, systick)
         run: |
           cd esp32s2-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,async,embassy-time-systick,embassy-executor-thread
+          cargo +esp build --example=embassy_* --release --features=embassy,async,embassy-time-systick,embassy-executor-thread
+      - name: check esp32s2-hal (embassy, async, timg0, embassy-executor-interrupt)
+        run: |
+          cd esp32s2-hal/
+          cargo +esp build --example=embassyinterrupt_* --release --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt
       - name: check esp32s2-hal (embassy, async, log/defmt)
         run: |
           cd esp32s2-hal/
-          cargo +esp build --example=embassy* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
-          cargo +esp build --example=embassy* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
+          cargo +esp build --example=embassy_* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
+          cargo +esp build --example=embassy_* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
       - name: check esp32s2-hal (psram)
         run: cd esp32s2-hal/ && cargo +esp build --example=psram --features=psram-2m --release # This example requires release!
       # Ensure documentation can be built
@@ -414,11 +422,15 @@ jobs:
       - name: check esp32s3-hal (embassy, async, timg0)
         run: |
           cd esp32s3-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,async,embassy-time-timg0,embassy-executor-thread
+          cargo +esp build --example=embassy_* --release --features=embassy,async,embassy-time-timg0,embassy-executor-thread
       - name: check esp32s3-hal (embassy, async, systick)
         run: |
           cd esp32s3-hal/
-          cargo +esp build --example=embassy* --release --features=embassy,async,embassy-time-systick,embassy-executor-thread
+          cargo +esp build --example=embassy_* --release --features=embassy,async,embassy-time-systick,embassy-executor-thread
+      - name: check esp32s3-hal (embassy, async, timg0, embassy-executor-interrupt)
+        run: |
+          cd esp32s3-hal/
+          cargo +esp build --example=embassyinterrupt_* --release --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt
       - name: check esp32s3-hal (octal psram and psram)
         run: | # This examples require release!
           cd esp32s3-hal/
@@ -427,8 +439,8 @@ jobs:
       - name: check esp32s3-hal (embassy, async, log/defmt)
         run: |
           cd esp32s3-hal/
-          cargo +esp build --example=embassy* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
-          cargo +esp build --example=embassy* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
+          cargo +esp build --example=embassy_* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,defmt
+          cargo +esp build --example=embassy_* --features=embassy,async,embassy-time-timg0,embassy-executor-interrupt,embassy-executor-thread,log
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp32s3-hal/ && cargo doc --features=eh1
