--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -33,17 +33,20 @@ strum                = { version = "0.25.0", default-features = false, features 
 void                 = { version = "1.0.2", default-features = false }
 usb-device           = { version = "0.2.9", optional = true }
 
+# atomic polyfill options
+portable-atomic              = { version = "1.5.1", default-features = false, optional = true }
+riscv-atomic-emulation-trap  = { version = "0.4.1", optional = true }
+
 # async
 embedded-hal-async = { version = "=1.0.0-rc.1", optional = true }
 embedded-io-async  = { version = "0.6.0", optional = true }
-embassy-executor   = { version = "0.3.0", optional = true, features = ["integrated-timers"] }
+embassy-executor   = { version = "0.3.2", optional = true, features = ["integrated-timers"] }
 embassy-futures    = { version = "0.1.0", optional = true }
-embassy-sync       = { version = "0.3.0", optional = true }
+embassy-sync       = { version = "0.4.0", optional = true }
 embassy-time       = { version = "0.1.5", optional = true, features = ["nightly"] }
 
 # RISC-V
 esp-riscv-rt                = { version = "0.5.0", optional = true, path = "../esp-riscv-rt" }
-riscv-atomic-emulation-trap = { version = "0.4.1", optional = true }
 
 # Xtensa
 xtensa-lx    = { version = "0.8.0",  optional = true }
@@ -69,11 +72,11 @@ serde      = { version = "1.0.190", features = ["derive"] }
 
 [features]
 esp32   = ["xtensa", "esp32/rt",   "procmacros/esp32",   "xtensa-lx/esp32",   "xtensa-lx-rt/esp32"]
-esp32c2 = ["riscv",  "esp32c2/rt", "procmacros/esp32c2"]
-esp32c3 = ["riscv",  "esp32c3/rt", "procmacros/esp32c3"]
+esp32c2 = ["riscv",  "esp32c2/rt", "procmacros/esp32c2", "portable-atomic?/unsafe-assume-single-core"]
+esp32c3 = ["riscv",  "esp32c3/rt", "procmacros/esp32c3", "portable-atomic?/unsafe-assume-single-core"]
 esp32c6 = ["riscv",  "esp32c6/rt", "procmacros/esp32c6"]
 esp32h2 = ["riscv",  "esp32h2/rt", "procmacros/esp32h2"]
-esp32s2 = ["xtensa", "esp32s2/rt", "procmacros/esp32s2", "xtensa-lx/esp32s2", "xtensa-lx-rt/esp32s2", "usb-otg"]
+esp32s2 = ["xtensa", "esp32s2/rt", "procmacros/esp32s2", "xtensa-lx/esp32s2", "xtensa-lx-rt/esp32s2", "usb-otg", "portable-atomic?/unsafe-assume-single-core"]
 esp32s3 = ["xtensa", "esp32s3/rt", "procmacros/esp32s3", "xtensa-lx/esp32s3", "xtensa-lx-rt/esp32s3", "usb-otg"]
 
 # Crystal frequency selection (ESP32 and ESP32-C2 only!)
@@ -125,8 +128,12 @@ embassy-time-systick = []
 embassy-time-timg0   = []
 
 # Architecture-specific features (intended for internal use)
-riscv  = ["critical-section/restore-state-u8", "esp-riscv-rt", "esp-riscv-rt/zero-bss", "riscv-atomic-emulation-trap"]
+riscv  = ["critical-section/restore-state-u8", "esp-riscv-rt", "esp-riscv-rt/zero-bss"]
 xtensa = ["critical-section/restore-state-u32"]
+
+portable-atomic = ["dep:portable-atomic"]
+riscv-atomic-emulation = ["dep:riscv-atomic-emulation-trap", "atomic-emulation"]
+atomic-emulation = []
 
 # Initialize / clear data sections and RTC memory
 rv-init-data     = ["esp-riscv-rt/init-data", "esp-riscv-rt/init-rw-text"]
