--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -39,9 +39,9 @@ embedded-hal-1     = { version = "=1.0.0-rc.1", package = "embedded-hal" }
 embedded-hal-async = "=1.0.0-rc.1"
 embedded-can       = "0.4.1"
 embedded-io-async  = "0.6.0"
-esp-backtrace      = { version = "0.9.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
+esp-backtrace      = { version = "0.9.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-jtag-serial"] }
 esp-hal-smartled   = { version = "0.6.0", features = ["esp32c6"], path = "../esp-hal-smartled" }
-esp-println        = { version = "0.7.0", features = ["esp32c6"] }
+esp-println        = { version = "0.7.0", default-features=false, features = ["esp32c6", "jtag_serial"] }
 heapless           = "0.7.16"
 hmac               = { version = "0.12.1", default-features = false }
 lis3dh-async       = "0.8.0"
@@ -94,6 +94,10 @@ required-features = ["eh1"]
 [[example]]
 name              = "embassy_hello_world"
 required-features = ["embassy", "embassy-executor-thread"]
+
+[[example]]
+name              = "embassy_multiprio"
+required-features = ["embassy", "embassy-executor-thread", "embassy-executor-interrupt", "embassy-time-systick"] # FIXME the example needs multiple alarms which only systick can provide at this point
 
 [[example]]
 name              = "embassy_wait"
