--- a/esp32h2-hal/Cargo.toml
+++ b/esp32h2-hal/Cargo.toml
@@ -96,6 +96,10 @@ name              = "embassy_hello_world"
 required-features = ["embassy", "embassy-executor-thread"]
 
 [[example]]
+name              = "embassy_multiprio"
+required-features = ["embassy", "embassy-executor-thread", "embassy-executor-interrupt", "embassy-time-systick"] # FIXME the example needs multiple alarms which only systick can provide at this point
+
+[[example]]
 name              = "embassy_i2c"
 required-features = ["async", "embassy", "embassy-time-systick", "embassy-executor-thread"]
 
