--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -48,7 +48,7 @@ riscv-atomic-emulation-trap  = { version = "0.4.1", optional = true }
 # async
 embedded-hal-async = { version = "=1.0.0-rc.1", optional = true }
 embedded-io-async  = { version = "0.6.0", optional = true }
-embassy-executor   = { version = "0.3.2", optional = true, features = ["integrated-timers"] }
+embassy-executor   = { version = "0.3.2", optional = true }
 embassy-futures    = { version = "0.1.0", optional = true }
 embassy-sync       = { version = "0.4.0", optional = true }
 embassy-time       = { version = "0.1.5", optional = true, features = ["nightly"] }
@@ -143,6 +143,14 @@ embassy-executor-thread    = ["embassy", "embassy-executor"]
 
 embassy-time-systick = []
 embassy-time-timg0   = []
+
+# prefer integrated timers, but allow using the generic queue if needed
+embassy-integrated-timers = ["embassy-executor?/integrated-timers"]
+embassy-generic-queue-8   = ["embassy-time/generic-queue-8"]
+embassy-generic-queue-16  = ["embassy-time/generic-queue-16"]
+embassy-generic-queue-32  = ["embassy-time/generic-queue-32"]
+embassy-generic-queue-64  = ["embassy-time/generic-queue-64"]
+embassy-generic-queue-128 = ["embassy-time/generic-queue-128"]
 
 # Architecture-specific features (intended for internal use)
 riscv  = ["critical-section/restore-state-u8", "esp-riscv-rt", "esp-riscv-rt/zero-bss"]
