--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -54,7 +54,7 @@ usb-device         = "0.2.9"
 usbd-serial        = "0.1.1"
 
 [features]
-default   = ["rt", "vectored"]
+default   = ["rt", "vectored", "embassy-integrated-timers"]
 async     = ["esp-hal-common/async"]
 debug     = ["esp-hal-common/debug"]
 defmt     = ["esp-hal-common/defmt", "esp-println/defmt"]
@@ -72,6 +72,14 @@ embassy-time-systick       = ["esp-hal-common/embassy-time-systick", "embassy-ti
 embassy-time-timg0         = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 embassy-executor-interrupt = ["esp-hal-common/embassy-executor-interrupt"]
 embassy-executor-thread    = ["esp-hal-common/embassy-executor-thread"]
+
+# prefer integrated timers, but allow using the generic queue if needed
+embassy-integrated-timers = ["esp-hal-common/embassy-integrated-timers"]
+embassy-generic-queue-8   = ["esp-hal-common/embassy-generic-queue-8"]
+embassy-generic-queue-16  = ["esp-hal-common/embassy-generic-queue-16"]
+embassy-generic-queue-32  = ["esp-hal-common/embassy-generic-queue-32"]
+embassy-generic-queue-64  = ["esp-hal-common/embassy-generic-queue-64"]
+embassy-generic-queue-128 = ["esp-hal-common/embassy-generic-queue-128"]
 
 # PSRAM support
 psram     = []
